# pinterust

./: Cargo.toml  README.md
html/: board.html  login.html  simple_index.html  user.html
html/css/: pinterust.css
sample_data/: boards.json  pins.json  users.json
src/: board.rs  data_models.rs  main.rs  pin.rs  user.rs
