[package]
name = "pinterust"
version = "0.1.0"
authors = ["Isabel Atkinson <isabel.atkinson@mongodb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.4.0"
actix-web = "3"
chrono = "0.4.19"
futures = "0.3.13"
mongodb = "1.2.0"
serde = { version = "1", features = ["derive"] }
tera = "1"
